[tool.poetry]
name = "crcnsget"
version = "0.1.0"
description = "clifor downloading data from crcns.org"
authors = ["Ethan Rooke <ethan@roo.ke>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
